tests/type-errors/types/copyable_enum_union_with_nocopy_variant.cx
struct Item : @nocopy {
    int value;
};

enum union Result {
    ok :: int,
    item :: Item
};

int main() {
    Result value;
    return 0;
}
